feat(pages): add refs to ctf post.

--- a/210215_heat_and_temp_with_ctf/index.html
+++ b/210215_heat_and_temp_with_ctf/index.html
@@ -76,6 +76,12 @@ The matrix representation of this formula gives us an efficient way to compose m
 \( y_{ext} = H_3 \cdot H_2 \cdot H_1 \cdot X_{int} \)
 
 Also, the matrix representation means it can be represented as a neural network, and differentiated with backpropagation to identify weights to match labeled temperature and heat flux boundary conditions.
+
+<b>References</b>
+
+1. Bassols, Xavier Botey. "The use of heat transfer functions for heat flow computation through multilayer walls". Masters Thesis. 2013.  
+
+2. Conduction Through The Walls. <a href="https://bigladdersoftware.com/epx/docs/9-0/engineering-reference/conduction-through-the-walls.html#conduction-through-the-walls">EnergyPlus Engineering Reference -- EnergyPlus 9.0</a> 
 <!-- autoescape off to allow images. Debug why safe filter isn't working
      ref for indent: https://jinja.palletsprojects.com/en/master/templates/#indent -->
 <body>
